<resources>
    <string name="app_name">家有在线</string>
    <string name="action_settings">Settings</string>
    <string name="base_url">http://www.jiayou9.com</string>
    <string name="server_url">http://www.jiayou9.com/phone/index.html</string>
    <string name="category_url">http://www.jiayou9.com/phone/category/index.html</string>
    <string name="rush_url">http://www.jiayou9.com/phone/rush.html</string>
    <string name="cart_url">http://www.jiayou9.com/phone/cart.html</string>
    <string name="user_url">http://www.jiayou9.com/phone/user.html</string>

    <string name="title_login">登录</string>
    <string name="title_register">注册</string>
    <string name="title_findPassWord">找回密码</string>
    <string name="title_resetPassWord">设置密码</string>
    <string name="title_myOrders">我的订单</string>
    <string name="title_myInfo">我的资料</string>
    <string name="title_address_list">地址管理</string>
    <string name="title_addressInfo">修改地址</string>
    <string name="title_newAddress">新建地址</string>
    <string name="title_feed_back">我要反馈</string>
    <string name="title_bucket">相册</string>
    <string name="title_safe">账户与安全</string>
    <string name="title_collection">我的收藏</string>
    <string name="title_history">我的足迹</string>
    <string name="title_updateTel">修改手机号</string>
    <string name="title_updateLoginPW">修改登录密码</string>
    <string name="title_updateNickName">修改昵称</string>
    <string name="title_classify_info">%1$s</string>
    <string name="title_refund">申请退款</string>
    <string name="title_evaluate">评价</string>
    <string name="title_refundInfo">退款详情</string>
    <string name="title_confirm_order">确认订单</string>
    <string name="title_ticket">优惠券</string>
    <string name="title_ticket_zone">优惠券专区</string>
    <string name="title_my_ticket">我的优惠券</string>
    <string name="title_ticket_statement">用券须知</string>
    <string name="title_invite">邀请奖励</string>
    <string name="title_rewardInfo">奖励详情</string>
    <string name="title_present_zone">买赠专区</string>
    <string name="title_abroad">跨境直邮</string>
    <string name="title_global">全球精选</string>
    <string name="title_country">国家地区馆</string>
    <string name="title_empty"></string>
    <string name="title_wholeSale1">申请成为集采用户</string>
    <string name="title_toWhole_sale_user">提交资料</string>
    <string name="title_toWhole_sale_center">集采中心</string>
    <string name="title_ecological">生态有机</string>
    <string name="title_specialty">贵州特产</string>
    <string name="title_tea_wine">贵酒贵茶</string>
    <string name="title_artwork">黔匠艺品</string>

    <string name="label_userName">"用户名　"</string>
    <string name="label_userPassWord">登录密码</string>
    <string name="label_register">免费注册</string>
    <string name="label_forgetPassWord">忘记密码?</string>
    <string name="label_passWord">"密码　　"</string>
    <string name="label_confirmPassWord">确认密码</string>
    <string name="label_invite_info">奖励详情</string>
    <string name="label_invite_code">我的邀请码</string>
    <string name="label_rule">"凡是今日起,在本商城领取优惠券,购买满90减5元"\n"满199元减10元,满250减15元,满300减20元"</string>
    <string name="label_limit1">"标红部分的跨境商品合计超过限额￥2000,请选择部分商品进行结算"</string>
    <string name="label_limit2">"抱歉,跨境商品与普通商品不能同时购买,请分开结算"</string>
    <string name="label_wholeSalePower">申请成为家有在线集采用户后，可以按照集采价进行批量采购，买的越多价格越低。(如;购买某种商品1-5件,20元;6-10件，18元;10件以上,16元)</string>

    <string name="hint_inputUserName">请输入用户名</string>
    <string name="hint_inputUserPassWord">请输入密码</string>
    <string name="hint_inputPhoneNum">请输入您的手机号</string>
    <string name="hint_inputCode">请输入验证码</string>
    <string name="hint_inputImgCode">图形验证码</string>
    <string name="hint_inputPassWord">请输入6位以上的密码</string>
    <string name="hint_inputPassWordAgain">再次输入密码</string>

    <string name="btn_login">登录</string>
    <string name="btn_next">下一步</string>
    <string name="btn_complete">完成</string>
    <string name="btn_close">关闭</string>
    <string name="btn_confirm">确定</string>
    <string name="btn_present">立即秒杀</string>
    <string name="btn_applyToWholeSaleUser">申请成为集采用户</string>
    <string name="btn_submit">提交</string>

    <string name="intent_value">value</string>
    <string name="intent_parent">parent</string>
    <string name="intent_register">register</string>
    <string name="intent_find">find</string>
    <string name="intent_updateTel">updateTel</string>
    <string name="intent_updatePW">updatePW</string>
    <string name="intent_receiptBO">receiptBO</string>
    <string name="intent_provinceId">provinceId</string>
    <string name="intent_cityId">cityId</string>
    <string name="intent_areaId">areaId</string>
    <string name="intent_provinceName">provinceName</string>
    <string name="intent_cityName">cityName</string>
    <string name="intent_areaName">areaName</string>
    <string name="intent_receiptName">receiptName</string>
    <string name="intent_receiptTel">receiptTel</string>
    <string name="intent_receiptAddress">receiptAddress</string>
    <string name="intent_commodityId">commodityId</string>
    <string name="intent_commodityDetailId">commodityDetailId</string>
    <string name="intent_commodityType">commodityType</string>
    <string name="intent_categoryId">categoryId</string>
    <string name="intent_isEdit">isEdit</string>
    <string name="intent_commodityList">commodityList</string>
    <string name="intent_totalPrice">totalPrice</string>
    <string name="intent_isFreePostage">isFreePostage</string>
    <string name="intent_orderId">orderId</string>
    <string name="intent_date">date</string>
    <string name="intent_orderDetails">orderDetails</string>
    <string name="intent_orderDetailId">orderDetailId</string>
    <string name="intent_commodityName">commodityName</string>
    <string name="intent_deliveryId">deliveryId</string>
    <string name="intent_deliveryFee">deliveryFee</string>
    <string name="intent_matchId">matchId</string>
    <string name="intent_count">count</string>
    <string name="intent_amount">amount</string>
    <string name="intent_returnType">returnType</string>
    <string name="intent_goodsState">goodsState</string>
    <string name="intent_returnReason">returnReason</string>
    <string name="intent_returnExplain">returnExplain</string>
    <string name="intent_returnProof">returnProof</string>
    <string name="intent_returnNoteId">returnNoteId</string>
    <string name="intent_index_url">index_url</string>
    <string name="intent_commodityIds">commodityIds</string>
    <string name="intent_commodityDetailIds">commodityDetailIds</string>
    <string name="intent_vouchersId">vouchersId</string>
    <string name="intent_vouchersMoney">vouchersMoney</string>
    <string name="intent_activityRule">activityRule</string>
    <string name="intent_countryId">countryId</string>
    <string name="intent_title">title</string>
    <string name="intent_countryName">countryName</string>
    <string name="intent_isAbroad">isAbroad</string>
    <string name="intent_isActivity">isActivity</string>

    <string name="sp_isIndex">isIndex</string>
    <string name="sp_phoneNum">phoneNum</string>
    <string name="sp_isLogin">isLogin</string>
    <string name="sp_userId">userId</string>
    <string name="sp_nickName">nickName</string>
    <string name="sp_classify">classify</string>
    <string name="sp_receiptId">receiptId</string>
    <string name="sp_receiptName">receiptName</string>
    <string name="sp_receiptTel">receiptTel</string>
    <string name="sp_receiptAddress">receiptAddress</string>
    <string name="sp_slide">slide</string>
    <string name="sp_type">type</string>
    <string name="sp_grab">grab</string>
    <string name="sp_special">special</string>
    <string name="sp_hot">hot</string>
    <string name="sp_guess">guess</string>
    <string name="sp_hasCache">hasCache</string>
    <string name="sp_currVersion">currVersion</string>
    <string name="sp_isFirst">isFirst</string>

    <string name="dialog">请稍后...</string>

    <!--tab-->
    <string name="tab_commodity_info">商品详情</string>
    <string name="tab_commodity_details">商品描述</string>
    <string name="tab_commodity_recommend">商品推荐</string>
    <string name="tab_order_all">全部</string>
    <string name="tab_order_pay">待付款</string>
    <string name="tab_order_deliver">待发货</string>
    <string name="tab_order_receipt">待收货</string>
    <string name="tab_order_evaluate">待评价</string>
    <string name="tab_order_after_sale">退款/售后</string>
    <string name="tab_invite">我的邀请</string>
    <string name="tab_repay">返利订单</string>
    <!--tab-->

    <!--dialog-->
    <string name="dialog_msg">请稍后...</string>
    <string name="loading">加载中...</string>
    <string name="load_failed">加载失败</string>
    <string name="invalid_network">网络异常,请检查网络</string>
    <string name="time_out">连接超时</string>
    <string name="load_no_more">全部加载完成</string>
    <string name="refreshing">刷新中</string>
    <!--dialog-->

    <string name="toast_3_pics">最多选择3张图片</string>
    <string name="empty" />
    <string name="label_copy">一键复制</string>
    <string name="btn_invite">立即邀请</string>

    <string name="umeng_sharebutton_copy">复制链接</string>

</resources>
