<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ThemeBg"
    android:orientation="vertical">

    <include layout="@layout/pub_layout_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_passWord"
                android:textColor="@color/ThemeText"
                android:textSize="@dimen/sp_16" />

            <EditText
                android:id="@+id/edt_passWord"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_inputPassWord"
                android:paddingLeft="10dp"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_confirmPassWord"
                android:textColor="@color/ThemeText"
                android:textSize="@dimen/sp_16" />

            <EditText
                android:id="@+id/edt_passWordAgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_inputPassWordAgain"
                android:paddingLeft="10dp"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            style="@style/myButton_Red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="toComplete"
            android:text="@string/btn_complete" />
    </LinearLayout>
</LinearLayout>