<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ThemeBg"
    android:orientation="vertical">

    <include
        android:id="@+id/title"
        layout="@layout/pub_layout_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/llayout_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <EditText
                android:id="@+id/edt_tel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_inputPhoneNum"
                android:maxLength="11"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <EditText
                    android:id="@+id/edt_imgCode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/hint_inputImgCode"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:textSize="@dimen/sp_16" />

            </LinearLayout>

            <ImageView
                android:id="@+id/img_code"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:onClick="getImgCode"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <EditText
                    android:id="@+id/edt_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/hint_inputCode"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:textSize="@dimen/sp_16" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_code"
                style="@style/myButton_Red"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="toGetCode"
                android:text="发送验证码"
                android:textColor="@color/selector_btn_text"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/btn_next"
            style="@style/myButton_Red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="toNext"
            android:text="@string/btn_next"
            android:textColor="@color/selector_btn_text" />
    </LinearLayout>

    <include
        layout="@layout/my_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>